syntax = "proto3";

package todo.v1;

option go_package = "github.com/yuuki1036/nextjs-connect-go/backend/gen/todo/v1;todov1";

import "google/protobuf/timestamp.proto";

message Todo {
  string id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateTodoRequest {
  string title = 1;
  string description = 2;
}

message CreateTodoResponse {
  Todo todo = 1;
}

message GetTodoRequest {
  string id = 1;
}

message GetTodoResponse {
  Todo todo = 1;
}

message ListTodosRequest {
  // TODO(human): Add pagination and filtering fields here
  // Consider: page_size, page_token, filter_completed
}

message ListTodosResponse {
  repeated Todo todos = 1;
  // TODO(human): Add pagination response fields if needed
}

message UpdateTodoRequest {
  string id = 1;
  optional string title = 2;
  optional string description = 3;
  optional bool completed = 4;
}

message UpdateTodoResponse {
  Todo todo = 1;
}

message DeleteTodoRequest {
  string id = 1;
}

message DeleteTodoResponse {
  bool success = 1;
}

service TodoService {
  rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse);
  rpc GetTodo(GetTodoRequest) returns (GetTodoResponse);
  rpc ListTodos(ListTodosRequest) returns (ListTodosResponse);
  rpc UpdateTodo(UpdateTodoRequest) returns (UpdateTodoResponse);
  rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse);
}
